added semantic tags
added sematic tags to the html and made the two sign up and sign in buttons

partially made the button layout

--- a/style.css
+++ b/style.css
@@ -9,4 +9,23 @@ body {
     border-radius: 20px;
     display: flex;
 }
+
+#sign_up {
+    height: 50px;
+    width: 100px;
+    margin-left: 10px;
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.main{
+    background-color: #6A23E7;
+    height: 260px;
+    border-radius: 25px;
+    margin-top: 70px;
+    padding-left: 50%;
+    padding-right: 50%;
+    display: flex;
+    justify-content: center;
+}
   
